# rd-sync

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-build.yml
rd_sync/: __init__.py  client.py  config.py  log_config.py  main.py  scheduler.py  sync.py  utils.py
rd_sync/models/: torrents.py
