[tool.poetry]
name = "rd-sync"
version = "0.1.0"
description = ""
authors = ["maulikp9898 <maulik.patel@covacsis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.10.0"
httpx = "^0.27.2"
pydantic-settings = "^2.6.1"
rich = "^13.9.4"
pyyaml = "^6.0.2"
platformdirs = "^4.3.6"
apscheduler = "^3.10.4"
structlog = "^24.4.0"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
